<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
        <groupId>cn.edu.lcu.cs</groupId>
        <artifactId>java-programming</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <artifactId>java-2025</artifactId>
    <name>Archetype - java-2025</name>
    <url>http://maven.apache.org</url>
    <dependencies>


    </dependencies>
    <distributionManagement>
        <repository>
            <id>maven-releases</id>
            <name>maven-releases</name>
            <url>http://10.200.6.1:8081/repository/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>maven-snapshots</id>
            <name>maven-snapshots</name>
            <url>http://10.200.6.1:8081/repository/maven-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
